--- a/app/package.json
+++ b/app/package.json
@@ -8,6 +8,7 @@
     "test-watch": "meteor test --driver-package practicalmeteor:mocha --port 3100"
   },
   "dependencies": {
+    "app": "^0.1.0",
     "babel-runtime": "^6.18.0",
     "bcrypt": "^0.8.7",
     "meteor-node-stubs": "~0.2.0"
