--- a/app/package.json
+++ b/app/package.json
@@ -34,5 +34,11 @@
         ]
       }
     }
+  },
+  "env": {
+    "browser": true,
+    "commonjs": true,
+    "es6": true,
+    "jquery": true
   }
 }
